--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@tap-payments/gosell": "^2.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
