--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^4.1.1",
     "axios": "^1.2.6",
+    "core-js": "^3.27.2",
     "cross-env": "^7.0.2",
     "firebase": "4.2.0",
     "history": "^5.0.0",
